--- a/frontend/limeroad/package.json
+++ b/frontend/limeroad/package.json
@@ -23,8 +23,9 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "slick-carousel": "^1.8.1",
-  "swiper": "^9.2.4",
-"web-vitals": "^2.1.4"
+    "swiper": "^9.2.4",
+    "vercel": "^29.1.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
